# open-smt-index

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  scheduled_build.yml
docs/: _config.yml  api-reference.md  cli-reference.md  contributing.md  dashboard.md  examples.md  index.md  installation.md  output-schema.md  quickstart.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/assets/css/: dashboard.css
docs/assets/js/: dashboard.js
docs/data/: stats.json
src/smt_index/: __init__.py  __main__.py  build.py  cli.py  merge.py  models.py  server.py  util.py  validate.py
src/smt_index/sources/: __init__.py  github_zip.py  idta.py
tests/: __init__.py  test_github_zip.py  test_idta_parser.py  test_version_parse.py
